tests/cli/snapshots/cli__clean__clean_orphan_keys.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
    - "--rules"
    - orphan
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
  --> ./messages/zh.json:4
     |
   4 | "Common.orphan": "Orphan Key" [orphan-key]

Would delete 0 unused key(s) and 1 orphan key(s) from 1 file(s).
Run with --apply to delete these keys.

----- stderr -----
