tests/cli/snapshots/cli__clean__clean_refuses_with_invalid_json.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: ✘ Cannot clean, 1 file(s) could not be parsed.
Parse errors mean some files could not be analyzed.
Run `glot check` to see details and fix them.
error: "Failed to parse JSON file: "./messages/zh.json""  [parse-error]
  --> ./messages/zh.json:0:0


✘ 1 problems (1 error, 0 warnings)
