tests/cli/snapshots/cli__clean__clean_unused_only.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
    - "--rules"
    - unused
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
  --> ./messages/en.json:4
     |
   4 | "Common.unused": "Unused" [unused]

Would delete 1 unused key(s) and 0 orphan key(s) from 1 file(s).
Run with --apply to delete these keys.

----- stderr -----
